--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Auth Service Image on Tag
+name: Build Suspect Service Image on Tag
 
 on:
   push:
@@ -20,7 +20,7 @@ jobs:
 
     - name: Build Docker image
       run: |
-        docker build -t pkten2535/integration-auth-service:${{ github.ref_name }} .
+        docker build -t pkten2535/integration-suspect-service:${{ github.ref_name }} .
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -30,4 +30,4 @@ jobs:
 
     - name: Push Docker image
       run: |
-        docker push pkten2535/integration-auth-service:${{ github.ref_name }}
+        docker push pkten2535/integration-suspect-service:${{ github.ref_name }}
