--- a/.env.localhost.example
+++ b/.env.localhost.example
@@ -9,6 +9,8 @@ DB_PASSWORD=postgres
 DB_PROTOCOL=tcp
 DB_SSL_MODE=disable
 
+OAUTH_JWT_SECRET=secret
+
 KTB_SUSPECT_LIST_HOST=https://mdmsvc.sit.krungthai
 
 RETRY_COUNT=3
